--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "vim/vim/bundle/vim-easymotion"]
 	path = vim/vim/bundle/vim-easymotion
 	url = https://github.com/Lokaltog/vim-easymotion.git
+[submodule "vim/vim/bundle/clang_complete"]
+	path = vim/vim/bundle/clang_complete
+	url = git@github.com:Rip-Rip/clang_complete.git
+[submodule "vim/vim/bundle/ctrlp"]
+	path = vim/vim/bundle/ctrlp
+	url = git@github.com:kien/ctrlp.vim.git
