Move xmonad related stuff

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ vim/vim/.VimballRecord
 vim/vim/bin/
 vim/vim/doc/
 vim/vim/plugin/
+
+xmonad/xmonad.errors
+xmonad/xmonad.hi
+xmonad/xmonad.o
+xmonad/xmonad-x86_64-linux
