--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,24 @@
 [submodule "vim/vim/pathogen"]
 	path = vim/vim/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/vim/bundle/vim-haskell"]
+	path = vim/vim/bundle/vim-haskell
+	url = https://github.com/wlangstroth/vim-haskell.git
+[submodule "vim/vim/bundle/syntastic"]
+	path = vim/vim/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/vim/bundle/vim2hs"]
+	path = vim/vim/bundle/vim2hs
+	url = https://github.com/dag/vim2hs.git
+[submodule "vim/vim/bundle/vim-markdown"]
+	path = vim/vim/bundle/vim-markdown
+	url = https://github.com/tpope/vim-markdown.git
+[submodule "vim/vim/bundle/haskellmode-vim"]
+	path = vim/vim/bundle/haskellmode-vim
+	url = https://github.com/lukerandall/haskellmode-vim.git
+[submodule "vim/vim/bundle/closetag.vim"]
+	path = vim/vim/bundle/closetag.vim
+	url = https://github.com/docunext/closetag.vim.git
+[submodule "vim/vim/bundle/html-template-syntax"]
+	path = vim/vim/bundle/html-template-syntax
+	url = https://github.com/pbrisbin/html-template-syntax.git
