--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/vim/bundle/html-template-syntax"]
 	path = vim/vim/bundle/html-template-syntax
 	url = https://github.com/pbrisbin/html-template-syntax.git
+[submodule "vim/vim/bundle/a"]
+	path = vim/vim/bundle/a
+	url = https://github.com/vim-scripts/a.vim.git
