--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/vim/bundle/a"]
 	path = vim/vim/bundle/a
 	url = https://github.com/vim-scripts/a.vim.git
+[submodule "vim/vim/bundle/tagbar"]
+	path = vim/vim/bundle/tagbar
+	url = git://github.com/majutsushi/tagbar.git
