--- a/.gitmodules
+++ b/.gitmodules
@@ -48,7 +48,7 @@
 	url = https://github.com/vim-scripts/a.vim
 [submodule "vim/vim/bundle/taglist"]
 	path = vim/vim/bundle/taglist
-	url = https://github.com/vim-scripts/taglist.vim
+	url = https://github.com/JBarberU/taglist.vim
 [submodule "vim/vim/bundle/supertab"]
 	path = vim/vim/bundle/supertab
 	url = https://github.com/ervandew/supertab
