Make vim-local a bundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/vim/bundle/supertab"]
 	path = vim/vim/bundle/supertab
 	url = https://github.com/ervandew/supertab
+[submodule "vim/vim/bundle/vim-local"]
+	path = vim/vim/bundle/vim-local
+	url = https://github.com/JBarberU/vim-local.git
