--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,3 +5,7 @@ bind r source-file ~/.tmux.conf
 # quick pane cycling
 unbind ^B
 bind ^B select-pane -t :.+
+
+# Configure status line
+set -g status-fg blue
+set -g status-bg green 
