Add stuff to tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,3 +9,9 @@ bind ^B select-pane -t :.+
 # Configure status line
 set -g status-fg blue
 set -g status-bg green 
+
+set-option -g message-fg white 
+set-option -g message-bg red 
+
+# Right side of status line
+set -g status-right "#(battery) | %R %d %b "
