--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "tools/battery-term"]
 	path = tools/battery-term
 	url = https://github.com/JBarberU/battery-term.git
+[submodule "tools/ip-monitor"]
+	path = tools/ip-monitor
+	url = https://github.com/JBarberU/ip-monitor.git
