Add plugin for better syntax highlight for C++

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "tools/ip-monitor"]
 	path = tools/ip-monitor
 	url = https://github.com/JBarberU/ip-monitor.git
+[submodule "vim/vim/bundle/vim-cpp-enhanced-highlight"]
+	path = vim/vim/bundle/vim-cpp-enhanced-highlight
+	url = https://github.com/octol/vim-cpp-enhanced-highlight.git
