--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/vim/bundle/vim-cpp-enhanced-highlight"]
 	path = vim/vim/bundle/vim-cpp-enhanced-highlight
 	url = https://github.com/octol/vim-cpp-enhanced-highlight.git
+[submodule "tools/timetracker-term"]
+	path = tools/timetracker-term
+	url = https://github.com/JBarberU/timetracker-term.git
