Increase history limit for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,3 +15,6 @@ set-option -g message-bg red
 
 # Right side of status line
 set -g status-right "#(battery) | %R %d %b "
+
+# Increase number of lines in history
+set -g history-limit 5000
