--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r rotate-window
+unbind s
+bind s source-file ~/.tmux.conf
 
 # quick pane cycling
 unbind ^B
@@ -8,10 +10,10 @@ bind ^B select-pane -t :.+
 
 # Configure status line
 set -g status-fg blue
-set -g status-bg green 
+set -g status-bg green
 
-set-option -g message-fg white 
-set-option -g message-bg red 
+set-option -g message-fg white
+set-option -g message-bg red
 
 # Right side of status line
 set -g status-right "#(battery) | %R %d %b "
