--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,7 @@
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+  branch = master
 [submodule "vim/vim/pathogen"]
 	path = vim/vim/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
