Add tool backer_py

--- a/.gitmodules
+++ b/.gitmodules
@@ -108,3 +108,6 @@
 [submodule "tools/grace_py"]
 	path = tools/grace_py
 	url = https://github.com/JBarberU/grace_py.git
+[submodule "tools/backer_py"]
+	path = tools/backer_py
+	url = https://github.com/JBarberU/backer_py.git
