--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,15 +8,6 @@ bind s source-file ~/.tmux.conf
 unbind ^B
 bind ^B select-pane -t :.+
 
-# Configure status line
-set -g status-fg blue
-set -g status-bg green
+# Load tmux powerline :)
+if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
 
-set-option -g message-fg white
-set-option -g message-bg red
-
-# Right side of status line
-set -g status-right "#(battery) | %R %d %b "
-
-# Increase number of lines in history
-set -g history-limit 5000
