--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,9 @@ bind s source-file ~/.tmux.conf
 unbind ^B
 bind ^B select-pane -t :.+
 
+# Kill selected pane
+bind ^C kill-pane
+
 # Load tmux powerline :)
 if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
 
