[tmux] Move status line back to the bottom

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,4 +13,4 @@ bind ^C kill-pane
 
 # Load tmux powerline :)
 if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
-set-option -g status-position top
+# set-option -g status-position top
