--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "vim/vim/bundle/vim-exchange.git"]
 	path = vim/vim/bundle/vim-exchange.git
 	url = https://github.com/tommcdo/vim-exchange.git
+[submodule "vim/vim/bundle/ultisnips"]
+	path = vim/vim/bundle/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
