--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "vim/vim/non-bundle/SimplyFold"]
 	path = vim/vim/non-bundle/SimplyFold
 	url = https://github.com/tmhedberg/SimpylFold
+[submodule "vim/vim/non-bundle/vim-markdown"]
+	path = vim/vim/non-bundle/vim-markdown
+	url = https://github.com/tpope/vim-markdown.git
