--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "vim/vim/non-bundle/vim-markdown"]
 	path = vim/vim/non-bundle/vim-markdown
 	url = https://github.com/tpope/vim-markdown.git
+[submodule "vim/vim/bundle/tabular"]
+	path = vim/vim/bundle/tabular
+	url = https://github.com/godlygeek/tabular.git
