--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/Rip-Rip/clang_complete.git
 [submodule "vim/vim/bundle/ctrlp"]
 	path = vim/vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim/vim/bundle/vimproc.vim"]
 	path = vim/vim/bundle/vimproc.vim
 	url = https://github.com/Shougo/vimproc.vim.git
