[vim] Add fold rules for tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,16 +1,18 @@
-# force a reload of the config file
+# vim: foldmethod=marker
+
+# force a reload of the config file {{{1
 unbind r
 bind r rotate-window
 unbind s
 bind s source-file ~/.tmux.conf
 
-# quick pane cycling
+# quick pane cycling {{{1
 unbind ^B
 bind ^B select-pane -t :.+
 
-# Kill selected pane
+# Kill selected pane {{{1
 bind ^C kill-pane
 
-# Load tmux powerline :)
+# Load tmux powerline :) {{{1
 if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
 # set-option -g status-position top
