[tmux] Make index start at 1 instead of 0
(0 is soo far of to the right :)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,3 +16,7 @@ bind ^C kill-pane
 # Load tmux powerline :) {{{1
 if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
 # set-option -g status-position top
+
+# Set base index to 1 instead of 0 {{{1
+set -g base-index 1
+setw -g pane-base-index 1
