--- a/.gitmodules
+++ b/.gitmodules
@@ -106,7 +106,7 @@
 	url = https://github.com/edkolev/tmuxline.vim
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
-	url = https://github.com/JBarberU/oh-my-zsh.git
+	url = https://github.com/robbyrussell/oh-my-zsh.git
 [submodule "vim/vim/bundle/c.vim"]
 	path = vim/vim/bundle/c.vim
 	url = https://github.com/vim-scripts/c.vim.git
