[tmux] Add key-bind for creating sized vertical
Runs "split-window" and "resize-pane -D 20" in one go

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,3 +20,6 @@ if-shell "test -f ~/.tmux_powerline.snap" "source ~/.tmux_powerline.snap"
 # Set base index to 1 instead of 0 {{{1
 set -g base-index 1
 setw -g pane-base-index 1
+
+# Bind '#' (0x23 in hex) to create new vertical split resized down 20 units
+bind 0x23 split-window\; resize-pane -D 20
