[tmux] Add keybinds for vim-like copy/paste

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,3 +23,10 @@ setw -g pane-base-index 1
 
 # Bind '#' (0x23 in hex) to create new vertical split resized down 20 units
 bind 0x23 split-window\; resize-pane -D 20
+
+# Copy/Paste for tmux
+setw -g mode-keys vi
+bind ^L copy-mode
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
