[tmux] Update config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,5 +28,5 @@ bind 0x23 split-window\; resize-pane -D 20
 setw -g mode-keys vi
 bind ^L copy-mode
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
