--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,3 +30,9 @@ bind ^L copy-mode
 bind p paste-buffer
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+
+# vim settings
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',rxvt-unicode-256color:RGB'
