--- a/.gitmodules
+++ b/.gitmodules
@@ -57,4 +57,4 @@
 	url = https://github.com/JBarberU/mkcpp.git
 [submodule "tools/luxafor_driver"]
 	path = tools/luxafor_driver
-	url = git@github.com:JBarberU/luxafor_driver.git
+	url = https://github.com/JBarberU/luxafor_driver.git
