--- a/xorg/keyboard.conf
+++ b/xorg/keyboard.conf
@@ -1,6 +1,8 @@
 Section "InputClass"
     Identifier "system-keyboard"
     MatchIsKeyboard "on"
-    Option "XkbLayout" "us(dvorak-intl)"
+    Option "XkbLayout" "us"
+    Option "XkbVariant" "dvorak-intl"
+    Option "XkbModel" "pc105"
     Option "XkbOptions" "caps:escape_shifted_capslock"
 EndSection
