[tmux] Print message when reloading tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 unbind r
 bind r rotate-window
 unbind s
-bind s source-file ~/.tmux.conf
+bind s source-file ~/.tmux.conf; display -p "Reloaded ~/.tmux.conf"
 
 # quick pane cycling {{{1
 unbind ^B
