--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,3 +36,9 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',rxvt-unicode-256color:RGB'
+
+# Default paths for new panes & windows
+
+bind 'c' new-window -c ~                         # New windows open in $HOME
+bind '"' split-window -c "#{pane_current_path}"  # splits open in current path
+bind % split-window -h -c "#{pane_current_path}" # splits open in current path
